# Qub3d

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.bat
assets/models/block/: template.json
assets/shaders/: frag.glsl  vert.glsl
source/: App.cpp  App.h  external.cpp  main.cpp  pch.h
source/app/: App.cpp  App.h  Callbacks.cpp  Internal.h  ResourceLoading.cpp
source/app/input/: Keyboard.h  Mouse.cpp  Mouse.h
source/input/: Gamepad.cpp  Gamepad.h  Input.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  keyboard.cpp  keyboard.h
source/opengl/: Camera.cpp  Camera.h  ChunkMesh.cpp  ChunkMesh.h  OpenGL.h  Opengl.h  Quad.cpp  Quad.h  Shader.cpp  Shader.h  TextureAtlas.cppa  TextureAtlas.ha  Vertex.h  shader.cpp  shader.h
source/utils/: Logger.cpp  Logger.h
source/world/: Block.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  World.h
src/: app.c  app.h  callbacks.decl  camera.c  camera.cpp  camera.h  chunk.cpp  chunk.h  ext.cpp  main.c  main.cpp
src/input/: keyboard.c  keyboard.cpp  keyboard.h  mouse.c  mouse.cpp  mouse.h
src/opengl/: shader.c  shader.cpp  shader.h
src/world/: Camera.cpp  Camera.h  block.cpp  block.h  blocks.h  chunk.cpp  chunk.h
